# newtorexstore

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml  publish.yml
TorexLocalStore/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
TorexLocalStore/android/: build.gradle.kts  local.properties
TorexLocalStore/example/: pubspec.yaml
TorexLocalStore/example/lib/: main.dart
TorexLocalStore/ios/: torex_local_store.podspec
TorexLocalStore/ios/Classes/: TorexLocalStorePlugin.swift
TorexLocalStore/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
TorexLocalStore/ios/Frameworks/TorexLocalStore.xcframework/: Info.plist
TorexLocalStore/lib/: torex_local_store.dart
TorexLocalStore/lib/src/: torex_store.dart
TorexLocalStore/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
TorexLocalStore/linux/: CMakeLists.txt
TorexLocalStore/linux/flutter/ephemeral/.plugin_symlinks/: jni  path_provider_linux
TorexLocalStore/macos/: torex_local_store.podspec
TorexLocalStore/macos/Classes/: TorexLocalStorePlugin.swift  rust_linker_hint.c
TorexLocalStore/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
TorexLocalStore/rust/: Cargo.toml
TorexLocalStore/rust/.cargo/: config.toml
TorexLocalStore/rust/benches/: storage_bench.rs
TorexLocalStore/rust/src/: api.rs  bloom.rs  chunk.rs  codec.rs  compaction.rs  compress.rs  config.rs  engine.rs  error.rs  frb_generated.rs  index.rs  lib.rs  memtable.rs  mmap.rs  query.rs  runtime.rs  segment.rs  storage.rs  transaction.rs  wal.rs  watcher.rs
TorexLocalStore/scripts/: build_native.sh  build_xcframework.sh  organize_artifacts.sh
TorexLocalStore/windows/: CMakeLists.txt
TorexLocalStore/windows/flutter/ephemeral/.plugin_symlinks/: path_provider_windows
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/torex/store/uz/torexstore/: MainActivity.kt
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/pages/: crud_page.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
